[cucumber] annotate some classes with `@NotNullByDefault`
Also reformat those files.

GitOrigin-RevId: a6a72472b54a7c73846c4dadc944f986cec96676